--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -648,14 +648,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 160,
    "outputs": [],
    "source": [
     "def check_stationarity(eigenvalues: np.ndarray) -> bool:\n",
     "    \"\"\"Check if the eigenvalues of the ARMA model are inferior to 1.\"\"\"\n",
-    "    if eigenvalues.dtype == np.complex128:\n",
-    "        return all(np.sqrt(np.real(eigenvalues)**2 + np.imag(eigenvalues)**2) < 1)\n",
-    "    else:\n",
+    "    if eigenvalues.dtype == np.complex128: # If eigenvalues are complex, calcul the norm\n",
+    "        a = np.real(eigenvalues)\n",
+    "        b = np.imag(eigenvalues)\n",
+    "        return all(np.sqrt(a**2 + b**2) < 1)\n",
+    "    else: # If eigenvalues are real, check if they are inferior to 1 in absolute value\n",
     "        return all(np.abs(eigenvalues) < 1)"
    ],
    "metadata": {
@@ -939,13 +941,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 161,
    "outputs": [
     {
      "data": {
       "text/plain": "array([0.72848943])"
      },
-     "execution_count": 146,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,13 +961,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 162,
    "outputs": [
     {
      "data": {
       "text/plain": "array([0.72848943])"
      },
-     "execution_count": 147,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,14 +981,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 163,
    "outputs": [
     {
      "data": {
       "text/plain": "          is_stationary\nARMA(1,0)          True\nARMA(2,0)          True\nARMA(3,0)          True\nARMA(4,0)          True\nARMA(1,1)          True\nARMA(2,2)          True\nARMA(3,3)          True\nARMA(4,4)          True",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>is_stationary</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>ARMA(1,0)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(2,0)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(3,0)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(4,0)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(1,1)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(2,2)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(3,3)</th>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>ARMA(4,4)</th>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 148,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,11 +1005,21 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "2.b) Effectuez des tests de rapport de vraisemblance pour justifier la sélection de deux modèles. Sélectionnez d'abord le meilleur parmi AR(1), AR(2), AR(3) et AR(4). Sélectionnez ensuite le meilleur modèle parmi ARMA(1,1), ARMA(2,2), ARMA(3,3) et ARMA(4,4). Utilisez le BIC pour justifier la sélection du meilleur de ces deux modèles."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 176,
    "outputs": [],
    "source": [
     "def compute_lr_statistic(reduced_ll: float, full_ll: float) -> float:\n",
+    "    \"\"\"Compute the likelihood ratio statistic.\"\"\"\n",
     "    return -2 * (reduced_ll - full_ll)"
    ],
    "metadata": {
@@ -1016,11 +1028,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 177,
    "outputs": [],
    "source": [
     "def compute_p_value_llr(reduced_ll: float, full_ll: float, df: int = 1) -> float:\n",
-    "    lr_statistic = compute_lr_statistic(reduced_ll, full_ll)\n",
+    "    \"\"\"Compute the p-value of the likelihood ratio test.\"\"\"\n",
+    "    lr_statistic = compute_lr_statistic(reduced_ll=reduced_ll, full_ll=full_ll)\n",
     "    p_val = sp.stats.chi2.sf(lr_statistic, df=df)\n",
     "    return p_val"
    ],
@@ -1029,21 +1042,131 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "On commence par sélectionner le meilleur modèle parmi AR(1), AR(2), AR(3) et AR(4)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet ARMA(2,0) fit les données aussi bien que le modèle réduit ARMA(1,0). Par conséquent, on devrait choisir le modèle ARMA(1,0) car il est plus simple.\n",
+    "- H1: Le modèle complet ARMA(2,0) fit mieux les données que le modèle réduit ARMA(1,0). Par conséquent, on devrait choisir le modèle ARMA(2,0) car il est plus précis."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 178,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([-1.27044227-0.j        ,  0.58783978-0.83721156j,\n        0.58783978+0.83721156j,  1.83290223-0.j        ])"
+      "text/plain": "7.820378576433156e-11"
      },
-     "execution_count": 89,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arma_models[\"ARMA(4,4)\"].arroots\n"
+    "compute_p_value_llr(arma_models[\"ARMA(1,0)\"].llf,\n",
+    "                    arma_models[\"ARMA(2,0)\"].llf,\n",
+    "                    df=1)"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Comme la p-value est inférieur au seuil significatif de 5%, on rejette l'hypothèse nulle et on peut donc conclure que le modèle ARMA(2,0) fit mieux les données que le modèle ARMA(1,0)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.007646861433308557"
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(2,0)\"].llf,\n",
+    "                    arma_models[\"ARMA(3,0)\"].llf,\n",
+    "                    df=1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Comme la p-value est inférieur au seuil significatif de 5%, on rejette l'hypothèse nulle et on peut donc conclure que le modèle ARMA(3,0) fit mieux les données que le modèle ARMA(2,0)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.006280983257624901"
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(3,0)\"].llf,\n",
+    "                    arma_models[\"ARMA(4,0)\"].llf,\n",
+    "                    df=1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Comme la p-value est inférieur au seuil significatif de 5%, on rejette l'hypothèse nulle et on peut donc conclure que le modèle ARMA(4,0) fit mieux les données que le modèle ARMA(3,0)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**On peut donc conclure que d'après le test du ratio de vraisemblance, le modèle AR(4) est le meilleur modèle pour modéliser les données parmis les modèles AR.**"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -1176,147 +1299,6 @@
    "cell_type": "markdown",
    "source": [
     "**On peut donc conclure que d'après le test du ratio de vraisemblance, le modèle ARMA(2,2) est le meilleur modèle pour modéliser les données parmis les modèles ARMA.**"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "On effectue le même raisonnement avec les modèles AR :"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "- H0: Le modèle complet AR(4) fit les données aussi bien que le modèle réduit AR(3). Par conséquent, on devrait choisir le modèle AR(3) car il est plus simple.\n",
-    "- H1: Le modèle complet AR(4) fit mieux les données que le modèle réduit AR(3). Par conséquent, on devrait choisir le modèle AR(4) car il est plus précis."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.006280983257624901"
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compute_p_value_llr(arma_models[\"ARMA(3,0)\"].llf,\n",
-    "                    arma_models[\"ARMA(4,0)\"].llf,\n",
-    "                    df=1)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "On remarque que la p-value est inférieure au seuil significatif de 5%. On peut donc rejeter l'hypothèse nulle. On peut donc conclure que le modèle AR(4) fit mieux les données que le modèle AR(3)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "- H0: Le modèle complet AR(4) fit les données aussi bien que le modèle réduit AR(2). Par conséquent, on devrait choisir le modèle AR(2) car il est plus simple.\n",
-    "- H1: Le modèle complet AR(4) fit mieux les données que le modèle réduit AR(2). Par conséquent, on devrait choisir le modèle AR(4) car il est plus précis."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.0006815655368223662"
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compute_p_value_llr(arma_models[\"ARMA(2,0)\"].llf,\n",
-    "                    arma_models[\"ARMA(4,0)\"].llf,\n",
-    "                    df=2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "On remarque que la p-value est inférieure au seuil significatif de 5%. On peut donc rejeter l'hypothèse nulle. On peut donc conclure que le modèle AR(4) fit mieux les données que le modèle AR(2)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "- H0: Le modèle complet AR(4) fit les données aussi bien que le modèle réduit AR(1). Par conséquent, on devrait choisir le modèle AR(1) car il est plus simple.\n",
-    "- H1: Le modèle complet AR(4) fit mieux les données que le modèle réduit AR(1). Par conséquent, on devrait choisir le modèle AR(4) car il est plus précis."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "2.7200521206435115e-12"
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compute_p_value_llr(arma_models[\"ARMA(1,0)\"].llf,\n",
-    "                    arma_models[\"ARMA(4,0)\"].llf,\n",
-    "                    df=3)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "On remarque que la p-value est inférieure au seuil significatif de 5%. On peut donc rejeter l'hypothèse nulle. On peut donc conclure que le modèle AR(4) fit mieux les données que le modèle AR(1)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "**On peut donc conclure que d'après le test du ratio de vraisemblance, le modèle AR(4) est le meilleur modèle pour modéliser les données parmis les modèles AR.**"
    ],
    "metadata": {
     "collapsed": false
