--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -1092,6 +1092,16 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet ARMA(3,0) fit les données aussi bien que le modèle réduit ARMA(2,0). Par conséquent, on devrait choisir le modèle ARMA(2,0) car il est plus simple.\n",
+    "- H1: Le modèle complet ARMA(3,0) fit mieux les données que le modèle réduit ARMA(2,0). Par conséquent, on devrait choisir le modèle ARMA(3,0) car il est plus précis."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 179,
    "outputs": [
@@ -1117,6 +1127,16 @@
    "cell_type": "markdown",
    "source": [
     "Comme la p-value est inférieur au seuil significatif de 5%, on rejette l'hypothèse nulle et on peut donc conclure que le modèle ARMA(3,0) fit mieux les données que le modèle ARMA(2,0)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet ARMA(4,0) fit les données aussi bien que le modèle réduit ARMA(3,0). Par conséquent, on devrait choisir le modèle ARMA(3,0) car il est plus simple.\n",
+    "- H1: Le modèle complet ARMA(4,0) fit mieux les données que le modèle réduit ARMA(3,0). Par conséquent, on devrait choisir le modèle ARMA(4,0) car il est plus précis."
    ],
    "metadata": {
     "collapsed": false
@@ -1163,92 +1183,9 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
-    "- H0: Le modèle complet ARMA(4,4) fit les données aussi bien que le modèle réduit ARMA(3,3). Par conséquent, on devrait choisir le modèle ARMA(3,3) car il est plus simple.\n",
-    "- H1: Le modèle complet ARMA(4,4) fit mieux les données que le modèle réduit ARMA(3,3). Par conséquent, on devrait choisir le modèle ARMA(4,4) car il est plus précis.\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.28949106543462216"
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compute_p_value_llr(arma_models[\"ARMA(3,3)\"].llf,\n",
-    "                    arma_models[\"ARMA(4,4)\"].llf,\n",
-    "                    df=2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Comme la p-value n'est pas inférieure au seuil significatif de 5%, nous ne pouvons pas rejeter l'hypothèse nulle. On peut donc conclure que le modèle ARMA(3,3) fit aussi bien les données que le modèle ARMA(4,4)."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "- H0: Le modèle complet ARMA(3,3) fit les données aussi bien que le modèle réduit ARMA(2,2). Par conséquent, on devrait choisir le modèle ARMA(2,2) car il est plus simple.\n",
-    "- H1: Le modèle complet ARMA(3,3) fit mieux les données que le modèle réduit ARMA(2,2). Par conséquent, on devrait choisir le modèle ARMA(3,3) car il est plus précis."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "0.3676921427657294"
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "compute_p_value_llr(arma_models[\"ARMA(2,2)\"].llf,\n",
-    "                    arma_models[\"ARMA(3,3)\"].llf,\n",
-    "                    df=2)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Comme la p-value n'est pas inférieure au seuil significatif de 5%, nous ne pouvons pas rejeter l'hypothèse nulle. On peut donc conclure que le modèle ARMA(2,2) fit aussi bien les données que le modèle ARMA(3,3)."
+    "On utilise le même raisonnement mis avec maintenant des modèles ARMA(p, q) pour sélectionner le meilleur modèle parmi ARMA(1,1), ARMA(2,2), ARMA(3,3) et ARMA(4,4)."
    ],
    "metadata": {
     "collapsed": false
@@ -1266,13 +1203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 181,
    "outputs": [
     {
      "data": {
       "text/plain": "5.093383915441103e-07"
      },
-     "execution_count": 92,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,7 +1226,48 @@
   {
    "cell_type": "markdown",
    "source": [
-    "On remarque que la p-value est inférieure au seuil significatif de 5%. On peut donc rejeter l'hypothèse nulle. On peut donc conclure que le modèle ARMA(2,2) fit mieux les données que le modèle ARMA(1,1)."
+    "Comme la p-value est inférieur au seuil significatif de 5%, on rejette l'hypothèse nulle et on peut donc conclure que le modèle ARMA(2,2) fit mieux les données que le modèle ARMA(1,1)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- H0: Le modèle complet ARMA(3,3) fit les données aussi bien que le modèle réduit ARMA(2,2). Par conséquent, on devrait choisir le modèle ARMA(2,2) car il est plus simple.\n",
+    "- H1: Le modèle complet ARMA(3,3) fit mieux les données que le modèle réduit ARMA(2,2). Par conséquent, on devrait choisir le modèle ARMA(3,3) car il est plus précis."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.3676921427657294"
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_p_value_llr(arma_models[\"ARMA(2,2)\"].llf,\n",
+    "                    arma_models[\"ARMA(3,3)\"].llf,\n",
+    "                    df=2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Comme la p-value est supérieur au seuil significatif de 5%, on ne peut pas rejeter l'hypothèse nulle et on peut donc conclure que le modèle ARMA(2,2) fit aussi bien les données que le modèle ARMA(3,3). Par conséquent, on devrait choisir le modèle ARMA(2,2) car il est plus simple."
    ],
    "metadata": {
     "collapsed": false
