--- a/tp1_working version with matlab_engine.ipynb
+++ b/tp1_working version with matlab_engine.ipynb
@@ -1361,7 +1361,7 @@
     "    arparams = arma_model.arparams # store the AR parameters\n",
     "    n_ar_params_1 = len(arparams) - 1\n",
     "\n",
-    "    #Make the params into an array\n",
+    "    #Make the params into a row array\n",
     "    param_array = arparams.reshape((1, arparams.shape[0]))\n",
     "\n",
     "    #Create sub array\n",
@@ -1688,8 +1688,7 @@
     }
    ],
    "source": [
-    "print(compute_eigenvalues(arma_models[\"ARMA(1,1)\"]))\n",
-    "print(compute_eigenvalues_2(arma_models[\"ARMA(1,1)\"]))"
+    "compute_eigenvalues(arma_models[\"ARMA(1,1)\"])"
    ]
   },
   {
