[ADD] | minor changes + interpretations

--- a/tp1.ipynb
+++ b/tp1.ipynb
@@ -10,9 +10,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import os\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import scipy as sp\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.tsa.ar_model import AutoReg\n",
@@ -25,6 +23,26 @@
     "# set figure size for all plots\n",
     "plt.rcParams[\"figure.figsize\"] = (15, 6)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Partie 1. Analyse préliminaire (20 points)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.a)\n",
+    "Chargez les données et ne gardez que les observations jusqu'à décembre 2019. Tracez la série brute $y_t$ avec des étiquettes sur chaque axe et un titre 'log(100 USDCAD=x)'. La dimension temporelle\n",
+    "doit apparaître sur l'axe des abscisses."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -145,6 +163,18 @@
     "plt.xlabel(\"Date\")\n",
     "plt.ylabel(f\"Log 100*USDCAD\")\n",
     "plt.title(\"log 100 USDCAD=x\")\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "## 1.b)\n",
+    "Supposons qu'il existe une tendance temporelle déterministe (polynôme d'ordre 2) : $\\tau_t = \\alpha + \\beta t + \\gamma t^2$\n",
+    "Appliquez la transformation requise pour stationnariser la série logarithmique (le logarithme du taux de change) et tracez la série résultante."
    ],
    "metadata": {
     "collapsed": false
@@ -344,6 +374,16 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.c)\n",
+    "Supposons qu'il existe une tendance temporelle stochastique, c'est-à-dire une marche aléatoire. Appliquez la transformation requise pour stationnariser la série logarithmique (le logarithme du taux de change) et tracez la série résultante."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "outputs": [
@@ -418,6 +458,16 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.d)\n",
+    "Analysez les fonctions d'autocorrélation de l'échantillon pour évaluer si les séries sont stationnaires. Quelle série choisiriez-vous pour estimer un modèle de série chronologique ?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "outputs": [
@@ -467,7 +517,17 @@
     "- Concernant le graphique des autocorrélations de la tendance déterministe polynomiale, on observe que les autocorrélations tendent lentement vers 0. La moyenne des autocorrélations n'est donc pas nulle. On peut donc conclure que la série `log_100_USDCAD` n'est pas stationnaire.\n",
     "- D'autre part, on observe que les autocorrélations de la série à tendance stochastique tendent rapidement vers 0 pour les 50 lags testés, avec une moyenne qui à l'air nulle en fonction du nombre de lags.\n",
     "\n",
-    "On sait que tout processus stationnaire est caractérisé par une courte mémoire: $Corr(y_t, y_{t-k}) \\rightarrow 0$ lorsque $k$ augmente. On peut donc conclure que la série `stoch_USDCAD` est stationnaire.\n"
+    "On sait que tout processus stationnaire est caractérisé par une courte mémoire: $Corr(y_t, y_{t-i}) \\rightarrow 0$ lorsque $i$ augmente. On peut donc conclure que la série `stoch_USDCAD` est stationnaire.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.e)\n",
+    "A partir de maintenant, utilisez exclusivement la série qui est stationnaire. Effectuez les tests de Ljung-Box avec 1 à 18 lags pour vérifier si la série est un bruit blanc et concluez."
    ],
    "metadata": {
     "collapsed": false
@@ -521,7 +581,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "On rappelle que le test de Ljung-Box permet de tester l'hypothèse nulle d'absence d'autocorrélation pour les termes bruits blancs : $H_0: Corr(y_t, y_{t-k}) = 0$.\n",
+    "On rappelle que le test de Ljung-Box permet de tester l'hypothèse nulle d'absence d'autocorrélation pour les termes bruits blancs : $H_0: Corr(y_t, y_{t-i}) = 0,  \\forall i \\in \\mathbb{N^+}$.\n",
     "\n",
     "On remarque que les `lb_pvalues` (p-values pour le test de Ljung-Box) sont très faibles pour les lags 1 à 18. On peut donc rejeter l'hypothèse nulle d'absence de corrélation pour ces lags au seuil de 5%. On peut donc conclure que les résidus ne sont pas indépendants et que la série est autocorrélée, ce qui implique que le terme d'erreur de la série `stoch_USDCAD` n'est pas bruit blanc."
    ],
@@ -550,6 +610,16 @@
     "- ARMA(2,2): $y_t = \\delta + \\phi_1 y_{t-1} + \\phi_2 y_{t-2} - \\theta_1 \\epsilon_{t-1} - \\theta_2 \\epsilon_{t-2} + \\epsilon_t$\n",
     "- ARMA(3,3): $y_t = \\delta + \\phi_1 y_{t-1} + \\phi_2 y_{t-2} + \\phi_3 y_{t-3} - \\theta_1 \\epsilon_{t-1} - \\theta_2 \\epsilon_{t-2} - \\theta_3 \\epsilon_{t-3} + \\epsilon_t$\n",
     "- ARMA(4,4): $y_t = \\delta + \\phi_1 y_{t-1} + \\phi_2 y_{t-2} + \\phi_3 y_{t-3} + \\phi_4 y_{t-4} - \\theta_1 \\epsilon_{t-1} - \\theta_2 \\epsilon_{t-2} - \\theta_3 \\epsilon_{t-3} - \\theta_4 \\epsilon_{t-4} + \\epsilon_t$"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2.a)\n",
+    "Estimez les 8 modèles par maximum de vraisemblance, présentez les résultats de l'estimation et vérifiez si les conditions de stationnarité sont satisfaites."
    ],
    "metadata": {
     "collapsed": false
