--- a/tp1_new.ipynb
+++ b/tp1_new.ipynb
@@ -327,7 +327,7 @@
     "- Concernant le graphique des autocorrélations de la tendance déterministe polynomiale, on observe que les autocorrélations tendent lentement vers 0. La moyenne des autocorrélations n'est donc pas nulle. On peut donc conclure que la série `log_100_USDCAD` n'est pas stationnaire.\n",
     "- D'autre part, on observe que les autocorrélations de la série à tendance stochastique tendent rapidement vers 0 pour les 50 lags testés, avec une moyenne qui à l'air nulle en fonction du nombre de lags.\n",
     "\n",
-    "On sait que tout processus stationnaire est caractérisé par une courte mémoire: $Corr(y_t, y_{t-k}) \\rightarrow 0$ lorsque $k$ augmente. On peut donc conclure que la série `stoch_USDCAD` est stationnaire."
+    "On sait que tout processus stationnaire est caractérisé par une courte mémoire: $Corr(y_t, y_{t-i}) \\rightarrow 0$ lorsque $i$ augmente. On peut donc conclure que la série `stoch_USDCAD` est stationnaire."
    ]
   },
   {
@@ -576,7 +576,7 @@
     "collapsed": false
    },
    "source": [
-    "On rappelle que le test de Ljung-Box permet de tester l'hypothèse nulle d'absence d'autocorrélation pour les termes bruits blancs : $H_0: Corr(y_t, y_{t-k}) = 0$.\n",
+    "On rappelle que le test de Ljung-Box permet de tester l'hypothèse nulle d'absence d'autocorrélation pour les termes bruits blancs : $H_0: Corr(y_t, y_{t-i}) = 0,  \\forall i \\in \\mathbb{N^+}$.\n",
     "\n",
     "On remarque que les `lb_pvalues` (p-values pour le test de Ljung-Box) sont extrêmement faibles pour les lags 1 à 18. Ceux-ci sont en dessous des seuil critique 1%, 5% et 10% pour tous les lags de 1 à 18. On peut donc rejeter l'hypothèse nulle d'absence de corrélation pour ces lags. On peut donc conclure que les résidus ne sont pas indépendants et que la série est autocorrélée, ce qui implique que le terme d'erreur de la série `stoch_USDCAD` n'est pas bruit blanc."
    ]
@@ -615,6 +615,15 @@
     "**2.a) Estimez les 8 modèles par maximum de vraisemblance, présentez les résultats de l'estimation et \n",
     "vérifiez si les conditions de stationnarité sont satisfaites.**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Soit $Y_t = \\Delta + \\Phi Y_{t-1} + U_t + \\Theta U_{t-1}$, l'équation matricielle de l'ARMA(p,q). Afin de vérifier si les conditions de stationnarité sont satisfaites, on peut calculer les valeurs propres de la matrice $\\Phi$. On rappelle qu'une condition de stationnarité est satisfaite si toutes les valeurs propres de $\\Phi$ sont dans le cercle unité."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -907,6 +916,9 @@
     }
    ],
    "source": [
+    "# Fit all ARIMA models and store it in a dictionary.\n",
+    "# The key is the order of the model and the value is the ARIMA model.\n",
+    "# Example : arma_models[\"ARMA(1,1)\"] to access the ARMA(1,1) model. etc.\n",
     "arma_models = {}\n",
     "\n",
     "order_list = [([1], 0, [0]),\n",
@@ -1028,7 +1040,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On constate que les conditions de stationnarité sont satisfaites pour tous les modèles."
+    "On constate que les conditions de stationnarité sont satisfaites pour tous les modèles i.e les valeurs propres pour chacun des modèles sont dans le cercle unité."
    ]
   },
   {
