--- a/tp1_new.ipynb
+++ b/tp1_new.ipynb
@@ -1,23 +1,11 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "General notes:<br>\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp; 1) Collapse some of the cells in groups.<br>\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp; 1.1) If cells are not directly answering a question, collapse them together.<br>\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp; 2) Add Markdown to identify sections<br>\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp; 3) Review all comments <br>\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp; 4) Add precision to all columns, graphics and tables to explain the variables or labels if needed <br>\n",
-    "&nbsp; &nbsp; &nbsp; &nbsp; 5) Standardiser les labels pour s'assurer qu'ils matchs ceux donnes dans le document"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "source": [
-    "Thomas Vaudescal : 11237578<br>"
+    "Thomas Vaudescal : 11237578<br>\n",
+    "Benjamin Viau :\n",
+    "Mathieu Verville :"
    ],
    "metadata": {
     "collapsed": false
