--- a/Tp1_final.ipynb
+++ b/Tp1_final.ipynb
@@ -4293,7 +4293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interprétation à ajouter..."
+    "Pour commencer, on sait que si les modèles GARCH(1,1) et ARCH(1) sont des spécifications adéquates pour la variance conditionnelle, on devrait s'attendre à ce que le terme $\\frac{u_t^2}{h_t}$ présentent de l'autocorrélation. À partir des graphiques d'autocorrélation et du test de Ljung-Box, on remarque que l'on ne peut pas rejetter l'hypothèse nulle au seuil de 5% pour les deux modèles AR(4) ARCH(1) et AR(4) GARCH(1,1). On peut donc conclure que les deux modèles sont des spécifications adéquates pour la variance conditionnelle. On remarque tout de même à partir des graphiques d'autocorrélations que le modèle AR(4) ARCH(1) présente une autocorrélation plus importante que le modèle AR(4) GARCH(1,1)pour certains lags (lag 6 et 10 par exemple). On pourrait donc conclure que le modèle AR(4) GARCH(1,1) est une meilleure spécification que le modèle AR(4) ARCH(1) pour la variance conditionnelle."
    ]
   },
   {
